feat añadiendo juego 2

--- a/index.html
+++ b/index.html
@@ -21,12 +21,22 @@
           <img src="./public/assets/imagenes.jgp/JUEGO 1.jpeg" alt="Juego 1" />
           <h2>TRES EN RAYA</h2>
         </div>
-        <div class="game" data-url="/games/game2/index.html">
-          <img src="/assets/images/game2-cover.jpg" alt="Juego 2" />
-          <h2>Juego 2</h2>
+        <div
+          class="game"
+          data-url="https://playful-heliotrope-346e57.netlify.app/"
+        >
+          <a href="https://playful-heliotrope-346e57.netlify.app/"></a>
+          <img
+            src="./public/assets/imagenes.jgp/Captura de pantalla_17-7-2024_132813_playful-heliotrope-346e57.netlify.app.jpeg"
+            alt="Juego 2"
+          />
+          <h2>MEMORY GAME</h2>
         </div>
         <div class="game" data-url="/games/game3/index.html">
-          <img src="/assets/images/game3-cover.jpg" alt="Juego 3" />
+          <img
+            src="https://playful-heliotrope-346e57.netlify.app/"
+            alt="Juego 3"
+          />
           <h2>Juego 3</h2>
         </div>
       </section>
