feat metiendo tercer juego

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
           />
           <h2>MEMORY GAME</h2>
         </div>
-        <div class="game" data-url="/games/game3/index.html">
+        <div class="game" data-url="https://juegopokemon.vercel.app/">
           <img
-            src="https://playful-heliotrope-346e57.netlify.app/"
+            src="./public/assets/imagenes.jgp/Captura de pantalla_21-7-2024_124819_juegopokemon.vercel.app.jpeg"
             alt="Juego 3"
           />
-          <h2>Juego 3</h2>
+          <h2>POKEMONS</h2>
         </div>
       </section>
     </main>
