feat poniendo algo de estylos y p

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   <body>
     <header>
       <h1>Mis Juegos</h1>
+      <p>
+        Pasa y diviertete un rato con estos juegos creados por Francisco Jesus,
+        solo espero que sirva para divertir a alguien
+      </p>
     </header>
     <main>
       <section class="games">
