--- a/index.html
+++ b/index.html
@@ -45,7 +45,25 @@
         </div>
       </section>
     </main>
-
+    <footer class="footer">
+      <div class="footer-buttons button buttons">
+        <a
+          href="https://instagram.com"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Instagram</a
+        >
+        <a href="https://twitter.com" target="_blank" rel="noopener noreferrer"
+          >Twitter</a
+        >
+        <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer"
+          >LinkedIn</a
+        >
+      </div>
+      <div class="creador">
+        <p>Creado por Francisco Jesús</p>
+      </div>
+    </footer>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
