feat metiendo musica por fin

--- a/index.html
+++ b/index.html
@@ -46,17 +46,26 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="footer-buttons button buttons">
+      <div class="footer-buttons">
         <a
+          class="contactos"
           href="https://instagram.com"
           target="_blank"
           rel="noopener noreferrer"
           >Instagram</a
         >
-        <a href="https://twitter.com" target="_blank" rel="noopener noreferrer"
+        <a
+          class="contactos"
+          href="https://twitter.com"
+          target="_blank"
+          rel="noopener noreferrer"
           >Twitter</a
         >
-        <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer"
+        <a
+          class="contactos"
+          href="https://linkedin.com"
+          target="_blank"
+          rel="noopener noreferrer"
           >LinkedIn</a
         >
       </div>
