feat metiendo musica sus controles

--- a/index.html
+++ b/index.html
@@ -72,6 +72,17 @@
       <div class="creador">
         <p>Creado por Francisco Jesús</p>
       </div>
+      <div class="music-controls">
+        <button id="playPauseBtn">Play</button>
+        <input
+          type="range"
+          id="volumeControl"
+          min="0"
+          max="1"
+          step="0.1"
+          value="0.5"
+        />
+      </div>
     </footer>
     <script type="module" src="./main.js"></script>
   </body>
