feat cambiando estilos

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         >
           <a href="https://playful-heliotrope-346e57.netlify.app/"></a>
           <img
-            src="./public/assets/imagenes.jgp/Captura de pantalla_17-7-2024_132813_playful-heliotrope-346e57.netlify.app.jpeg"
+            src="./public/assets/imagenes.jgp/Captura de pantalla_25-7-2024_164551_localhost.jpeg"
             alt="Juego 2"
           />
           <h2>MEMORY GAME</h2>
