feat cambiando estilos

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header>
       <h1>Mis Juegos</h1>
       <p>
-        Pasa y diviertete un rato con estos juegos creados por Francisco Jesus,
-        solo espero que sirva para divertir a alguien
+        Pasa y prueba con estos tres juegos creados para entretenerte y agilizar
+        tu mente, además seguro que consigues divertirte
       </p>
     </header>
     <main>
