feat creando animacion de bolas

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       </p>
     </header>
     <main>
+      <div class="balls-container"></div>
       <section class="games">
         <div class="game" data-url="https://proyecto5-mu.vercel.app/">
           <a href="https://proyecto5-mu.vercel.app/"></a>
